--- a/styles.css
+++ b/styles.css
@@ -317,8 +317,8 @@ select:focus {
   padding-inline: 0.6rem 1rem;
 }
 
-.prev-btn,
-.next-btn{
+#prev-page,
+#next-page{
   padding:0.6rem 1.2rem;
 }
 
